# astro-ai

./: README.md  package.json
apps/backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  catalog-info.yaml  package.json  pyproject.toml
apps/backend/app/api/: lifespan.py  main_router.py  server.py
apps/backend/app/api/dependencies/: connectors.py  mongo.py  repositories.py
apps/backend/app/api/dependencies/use_cases/: agents.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/agents/: endpoints.py  router.py
apps/backend/app/core/: logging.py  settings.py
apps/backend/app/core/connectors/: base.py  mongo.py
apps/backend/app/entities/: agents.py  base.py  dummy.py
apps/backend/app/exceptions/: agents.py  http.py
apps/backend/app/repositories/agents/: mongo.py
apps/backend/app/repositories/base/: __init__.py  mongo.py
apps/backend/app/repositories/mongo/: dummy.py
apps/backend/app/schemas/agents/: __init__.py  agent_create.py  agents_list.py  base_schema.py
apps/backend/app/use_cases/agents/: __init__.py  create_agent.py  delete_agents.py  list_agents.py
apps/backend/app/utils/: __init__.py  build_filters.py  datetime.py
configs/eslint-config/: README.md  package.json
configs/tailwind-config/: package.json  tailwind.config.ts  tsconfig.json
configs/ts-config/: nextjs.json  package.json  react-library.json
